# Emotion-Classification

./: .gitignore  .ruff.toml  hugging.ipynb  pyproject.toml  readme.md  requirements.txt
notebooks/: GoogleViT.ipynb  evalute_models.ipynb
src/: backup.py  checkpoint_utils.py  config.py  dataset.py  evaluate.py  fer2013.py  linear_probe.py  lora.py  metadata.py  metrics.py  train.py  training_utils.py  transforms.py  visualization.py  wandb_utils.py
src/models/: CNN_models.py  ViT_models.py  base_model.py
src/types/: __init__.py  metadata.py  model.py  optimizer.py  parameters.py
src/utils/: core.py  monitor_utils.py  train_config.py  train_data.py  train_history.py  training_monitor.py  training_utils.py
