[project]
name = "emotion-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.20.1",
    "albumentations>=1.3.0",
    "wandb>=0.15.0",
    "transformers>=4.30.0",
    "opencv-python>=4.7.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "datasets>=4.4.1",
    "nbformat>=5.10.4",
    "peft>=0.18.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
